--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.google.android.material:material:1.1.0' //BottomNavigationView
+    //BottomNavigationView
+    implementation 'com.google.android.material:material:1.1.0'
+
+    //네이버 지도 SDK
+    implementation 'com.naver.maps:map-sdk:3.8.0'
 }
