--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
 
     //네이버 지도 SDK
     implementation 'com.naver.maps:map-sdk:3.8.0'
+
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
