--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bhsd.bustayo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- 네이버 지도 -->
         <meta-data
@@ -24,7 +27,9 @@
         </activity>
 
         <!-- 검색 화면 -->
-        <activity android:name=".SearchActivity"/>
+        <activity
+            android:name=".SearchActivity"
+            android:windowSoftInputMode="stateAlwaysVisible"/>
 
     </application>
 
