1. 메인화면 변경 2. 햄버거 버튼 연결 3. 검색 화면 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name=".SearchActivity"
             android:windowSoftInputMode="stateAlwaysVisible"/>
 
+        <!-- 불편신고 화면 -->
+        <activity android:name=".ComplaintActivity"/>
+
     </application>
 
 </manifest>
