--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,16 @@
         <!-- 불편신고 화면 -->
         <activity android:name=".ComplaintActivity"/>
 
+        <!-- 버스 화면 -->
+        <activity android:name=".StationListActivity" />
+
+        <!-- 버스정보 화면 -->
+        <activity android:name=".BusInfoActivity" />
+
+        <!-- 정류장 화면 -->
+        <activity android:name=".StationActivity" />
+
+
     </application>
 
 </manifest>
