--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bhsd.bustayo">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
-
-        <!-- 네이버 지도 -->
+        android:theme="@style/AppTheme">
+        <activity android:name=".JoinActivity"></activity>
+        <activity android:name=".LoginActivity" /> <!-- 네이버 지도 -->
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="14x4s7l2zd" />
@@ -24,29 +24,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- 검색 화면 -->
+        </activity> <!-- 검색 화면 -->
         <activity
             android:name=".SearchActivity"
-            android:windowSoftInputMode="stateAlwaysVisible"/>
-
-        <!-- 불편신고 리스트 화면 -->
-        <activity android:name=".ComplaintActivity"/>
-
-        <!-- 불편신고 접수 화면 -->
-        <activity android:name=".AddComplaintActivity"/>
-
-        <!-- 버스 화면 -->
-        <activity android:name=".StationListActivity" />
-
-        <!-- 버스정보 화면 -->
-        <activity android:name=".BusInfoActivity" />
-
-        <!-- 정류장 화면 -->
+            android:windowSoftInputMode="stateAlwaysVisible" /> <!-- 불편신고 리스트 화면 -->
+        <activity android:name=".ComplaintActivity" /> <!-- 불편신고 접수 화면 -->
+        <activity android:name=".AddComplaintActivity" /> <!-- 버스 화면 -->
+        <activity android:name=".StationListActivity" /> <!-- 버스정보 화면 -->
+        <activity android:name=".BusInfoActivity" /> <!-- 정류장 화면 -->
         <activity android:name=".StationActivity" />
-
-
     </application>
 
 </manifest>
