--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bhsd.bustayo">
 
+    <!-- API 호출하기 위함 -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -11,12 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
-
-        <!-- 네이버 지도 -->
-        <meta-data
-            android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="14x4s7l2zd" />
+        android:usesCleartextTraffic="true">
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -25,6 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- 네이버 지도 -->
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="14x4s7l2zd" />
 
         <!-- 검색 화면 -->
         <activity
