--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bhsd.bustayo">
-
     <!-- API 호출하기 위함 -->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,8 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".LostGoodsinfo"></activity>
         <!-- android:networkSecurityConfig="@xml/network_security_config" -->
-
         <!-- 네이버 지도 -->
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
@@ -26,32 +25,17 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- 검색 화면 -->
+        </activity> <!-- 검색 화면 -->
         <activity
             android:name=".SearchActivity"
-            android:windowSoftInputMode="stateAlwaysVisible"/>
-
-        <!-- 불편신고 리스트 화면 -->
-        <activity android:name=".ComplaintActivity"/>
-
-        <!-- 불편신고 접수 화면 -->
-        <activity android:name=".AddComplaintActivity"/>
-
-        <!-- 버스 화면 -->
-        <activity android:name=".StationListActivity" />
-
-        <!-- 버스정보 화면 -->
-        <activity android:name=".BusInfoActivity" />
-
-        <!-- 정류장 화면 -->
+            android:windowSoftInputMode="stateAlwaysVisible" /> <!-- 불편신고 리스트 화면 -->
+        <activity android:name=".ComplaintActivity" /> <!-- 불편신고 접수 화면 -->
+        <activity android:name=".AddComplaintActivity" /> <!-- 버스 화면 -->
+        <activity android:name=".StationListActivity" /> <!-- 버스정보 화면 -->
+        <activity android:name=".BusInfoActivity" /> <!-- 정류장 화면 -->
         <activity android:name=".StationActivity" />
-
         <activity android:name=".JoinActivity" />
-
         <activity android:name=".LoginActivity" />
-
     </application>
 
 </manifest>
