--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,9 +56,14 @@
         <!-- 정류장 화면 -->
         <activity android:name=".activity.StationActivity" />
 
-        <activity android:name=".JoinActivity" />
+        <!-- 회원가입 화면-->
+        <activity android:name=".activity.JoinActivity" />
 
-        <activity android:name=".LoginActivity" />
+        <!-- 로그인 화면-->
+        <activity android:name=".activity.LoginActivity" />
+
+        <!-- 분실물 화면-->
+        <activity android:name=".activity.LostGoodsActivity"/>
 
     </application>
 
