[설정 - 약관 및 정책]에서 개인정보 처리방침, 정보 제공처 & 로그인부분 SharedPreferences

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,9 @@
         <activity android:name=".activity.LostGoodsDetailActivity" />
 
         <!-- 설정 화면 -->
-        <activity android:name=".activity.SettingActivity"/>
+        <activity android:name=".activity.SettingActivity" />
+        <activity android:name=".activity.InformationProvider" />
+        <activity android:name=".activity.PrivacyPolicy" />
 
         <!-- 공지 화면 -->
         <activity android:name=".activity.NoticeActivity" />
