--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,8 @@
         <activity android:name=".activity.SettingActivity" />
         <activity android:name=".activity.InformationProvider" />
         <activity android:name=".activity.PrivacyPolicy" />
+        <activity android:name=".activity.HelpActivity" />
+        <activity android:name=".activity.QuestionActivity" />
 
         <!-- 공지 화면 -->
         <activity android:name=".activity.NoticeActivity" />
